fix(auth): 修复Better Auth注册失败问题
- 移除Account模型中不兼容的type字段及其他NextAuth遗留字段
- 更新Account schema以匹配Better Auth标准字段
- 添加账户字段映射配置到auth.ts
- 修复emailAndPassword配置中的allowSignUp属性
- 重新生成Prisma客户端并同步数据库

解决了"Argument type is missing"的注册错误，现在用户可以成功注册账户。

--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "check:all": "pnpm run lint && pnpm run format:check && pnpm run check:types",
     "prepare": "husky",
     "test": "vitest run",
-    "db:seed": "pnpx tsx prisma/seed.ts",
-    "db:reset": "prisma db push --force-reset && pnpm db:seed",
-    "db:generate": "prisma generate"
+    "db:reset": "prisma db push --force-reset",
+    "db:generate": "prisma generate",
+    "db:push": "prisma db push"
   },
   "dependencies": {
     "@daveyplate/better-auth-ui": "^3.2.6",
