--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "better-auth": "^1.3.27",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.545.0",
     "multer": "^2.0.2",
