--- a/.env.example
+++ b/.env.example
@@ -38,6 +38,21 @@ BETTER_AUTH_JWT_EXPIRES_IN=2592000
 # 会话有效期 (秒，默认30天)
 BETTER_AUTH_SESSION_EXPIRES_IN=2592000
 
+# 是否禁用用户注册 (true: 禁用, false或留空: 启用)
+NEXT_PUBLIC_DISABLE_SIGNUP=false
+
+# 是否显示认证页面左侧装饰区域 (false: 隐藏, true或留空: 显示)
+NEXT_PUBLIC_SHOW_AUTH_DECORATION=true
+
+# ICP备案号 (留空则不显示)
+NEXT_PUBLIC_ICP_NUMBER=
+
+# 公安联网备案号 (留空则不显示)
+NEXT_PUBLIC_POLICE_NUMBER=
+
+# 公安联网备案查询链接 (可选)
+NEXT_PUBLIC_POLICE_NUMBER_LINK=
+
 # ==================== 邮件服务配置 (可选) ====================
 # SMTP 邮件服务器配置 (用于邮箱验证和通知)
 # EMAIL_FROM=noreply@yourschool.com
