feat: 完成任务 8.3 和 8.4 - 数据库种子数据和生产环境部署配置
数据库种子数据 (任务 8.3):

- 创建 Prisma seed 脚本，包含示例用户、学生、分组、标签、积分规则和商城商品

- 添加数据库种子命令到 package.json (db:seed, db:setup)

- 支持开发环境数据初始化和清理

生产环境部署配置 (任务 8.4):

- 创建优化的多阶段 Dockerfile (standalone 模式)

- 配置生产环境 Docker Compose (包含 PostgreSQL、Nginx、Redis 可选服务)

- 添加 .dockerignore 优化构建体积

- 创建生产环境配置示例 (.env.production.example)

- 配置 Nginx 反向代理和 SSL/HTTPS 支持

- 添加健康检查 API (/api/health)

部署工具和脚本:

- 创建自动部署脚本 (deploy.sh)

- 添加数据库备份脚本 (scripts/backup.sh)

- 添加数据库恢复脚本 (scripts/restore.sh)

- 创建完整部署指南文档 (docs/deployment-guide.md)

- 创建快速部署指南 (docs/quick-start.md)

配置优化:

- 启用 Next.js standalone 输出模式

- 添加 tsx 依赖支持种子脚本

- 更新 .gitignore 保护敏感文件 (backups, ssl, .env.production)

- 创建必要的目录结构 (backups, ssl)

Related: 任务 8.3, 任务 8.4

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,14 @@ next-env.d.ts
 # uploads
 /uploads/*
 !/uploads/.gitkeep
+
+# backups
+/backups/*
+!/backups/.gitkeep
+
+# SSL certificates
+/ssl/*
+!/ssl/.gitkeep
+
+# production environment
+.env.production
