--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "test": "vitest run",
     "db:reset": "prisma db push --force-reset",
     "db:generate": "prisma generate",
-    "db:push": "prisma db push"
+    "db:push": "prisma db push",
+    "db:seed": "tsx prisma/seed.ts",
+    "db:setup": "prisma db push && pnpm db:seed"
   },
   "dependencies": {
     "@daveyplate/better-auth-ui": "^3.2.6",
@@ -81,6 +83,7 @@
     "prettier-plugin-tailwindcss": "^0.7.0",
     "shadcn": "^3.4.2",
     "tailwindcss": "^4",
+    "tsx": "^4.19.2",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   },
