feat: 添加管理员用户管理系统和优化部署配置
## 新增功能

### 1. 管理员用户管理系统
- 添加完整的用户 CRUD 功能 (/admin/users)
- 支持创建用户、修改角色、封禁/解封、重置密码
- 基于角色的访问控制 (RBAC)
- 集成 Better Auth admin plugin

### 2. Better Auth 集成优化
- 数据库添加 role, banned, banReason, banExpires 字段
- 种子文件使用 auth.api.signUpEmail() 确保正确的密码哈希
- 默认管理员: admin@example.com / Admin@123456
- 默认教师: teacher@example.com / Teacher@123456

### 3. 权限系统
- 新增 permissions.ts 工具函数
- 导航菜单基于角色动态过滤
- 普通用户无法访问管理员功能

## 部署优化

### 1. Traefik 集成
- 替换 Nginx，使用 Traefik 作为默认反向代理
- 自动 Let's Encrypt SSL 证书管理
- 自动证书续期
- 内置 Dashboard 监控

### 2. Docker 本地文件映射
- 所有数据映射到 ${DATA_DIR:-./data} 本地目录
- postgres: data/postgres
- uploads: data/uploads
- letsencrypt: data/letsencrypt
- 移除 Docker volumes，便于备份和迁移

### 3. 环境变量清理
- 移除所有未使用的环境变量
- .env.production.example 精简至 15 个实际使用的变量
- .env.example 保留完整配置供开发使用

## 文件变更

### 新增
- src/app/(dashboard)/admin/users/ - 用户管理页面
- src/app/api/admin/users/ - 用户管理 API (7个端点)
- src/lib/permissions.ts - 权限工具函数
- traefik.toml - Traefik 配置
- docker-compose.traefik.yml - Traefik 部署配置
- .env.production.example - 精简的生产环境配置

### 修改
- prisma/schema.prisma - 添加 role/banned 字段
- prisma/seed.ts - 使用 Better Auth API
- src/lib/auth.ts - 集成 admin plugin
- src/lib/navigation.ts - 添加用户管理菜单
- src/components/layout/app-sidebar.tsx - 权限过滤
- docker-compose.prod.yml - Traefik + 本地目录映射
- .env.example - 移除 Redis 配置

## 部署说明

生产环境部署:
```bash
# 创建数据目录
mkdir -p data/{postgres,uploads,letsencrypt}
chmod 600 data/letsencrypt/acme.json

# 配置环境变量
cp .env.production.example .env.production
nano .env.production

# 启动服务
docker compose -f docker-compose.prod.yml up -d
```

--- a/docker-compose.traefik.yml
+++ b/docker-compose.traefik.yml
@@ -1,5 +1,5 @@
 # ==============================================
-# 班主任班级管理平台 - 生产环境 Docker Compose 配置
+# 班主任班级管理平台 - 使用 Traefik 的 Docker Compose 配置
 # ==============================================
 
 services:
