--- a/.dockerignore
+++ b/.dockerignore
@@ -18,9 +18,10 @@ build
 .tsbuildinfo
 
 # 环境变量（敏感信息）
-.env
 .env*.local
-.env.production
+# 允许 .env 和 .env.production 用于构建时读取 NEXT_PUBLIC_ 变量
+# .env
+# .env.production
 
 # 开发工具
 .vscode
