--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -31,9 +31,9 @@ services:
       - 'traefik.http.routers.traefik.service=api@internal'
       # Dashboard 认证 (使用 htpasswd 生成)
       # 默认用户名: admin, 密码: admin (生产环境务必修改)
-      # 生成命令: echo $(htpasswd -nb admin your-password) | sed -e 's/\$/$$$$$/g'
+      # 生成命令: echo $(htpasswd -nb admin password) | sed -e s/\\$/\\$\\$/g
       - 'traefik.http.routers.traefik.middlewares=auth'
-      - 'traefik.http.middlewares.auth.basicauth.users=admin:$$$$apr1$$$$8EVjn/nj$$$$GiLUZqcbueTFeD23SuB6x0'
+      - 'traefik.http.middlewares.auth.basicauth.users=admin:$$apr1$$CzbK/tWo$$sts1pjK3.971VFa7.BwIJ0'
 
   # PostgreSQL 数据库服务
   postgres:
