--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -70,6 +70,10 @@ services:
 
   # Next.js 应用服务
   app:
+    # 支持两种方式：1) 本地构建 2) 使用预构建镜像
+    # 使用预构建镜像时，设置 DOCKER_IMAGE 环境变量
+    # 例如: DOCKER_IMAGE=class-tool:latest
+    image: ${DOCKER_IMAGE:-class-tool:latest}
     build:
       context: .
       dockerfile: Dockerfile
