feat: 完善生产环境部署配置
- 修复健康检查：使用 127.0.0.1 替代 localhost
- 修复中间件：将 /api/health 添加到公开路径
- 优化 Traefik 配置：
  - 支持根域名到 www 子域名的重定向
  - HTTP 自动重定向到 HTTPS
  - 使用环境变量配置域名和认证
  - Traefik Dashboard 密码移至环境变量
- 优化 docker-compose.prod.yml：
  - 添加网络标签修复 Traefik 路由
  - 支持多域名配置 (DOMAIN, ROOT_DOMAIN, TRAEFIK_DOMAIN)
- 新增故障排除文档 (docs/troubleshooting.md)
- 更新环境变量示例文件

--- a/.env.production.example
+++ b/.env.production.example
@@ -22,6 +22,9 @@ APP_PORT=3000
 
 # 域名配置（用于 Traefik）
 DOMAIN=your-domain.com
+ROOT_DOMAIN=your-root-domain.com
+TRAEFIK_DOMAIN=traefik.your-domain.com
+TRAEFIK_AUTH_USERS=admin:YOUR_HTPASSWD_ENCODED_CREDENTIALS_HERE_CHANGE_ME
 
 # ==================== 数据库配置 ====================
 # PostgreSQL 配置（必须修改密码！）
