--- a/.env.production.image.example
+++ b/.env.production.image.example
@@ -11,6 +11,9 @@
 
 # 域名配置 - 必须修改！
 DOMAIN=your-domain.com
+ROOT_DOMAIN=your-root-domain.com
+TRAEFIK_DOMAIN=traefik.your-domain.com
+TRAEFIK_AUTH_USERS=admin:YOUR_HTPASSWD_ENCODED_CREDENTIALS_HERE_CHANGE_ME
 
 # 数据库密码 - 必须修改！
 POSTGRES_PASSWORD=YOUR_STRONG_PASSWORD_HERE_CHANGE_ME
